RESOLVED FIXED303517
[blocks-in-inline] Fix fast/block/margin-collapse/block-inside-inline/011.html, 015.html and 016.html
https://bugs.webkit.org/show_bug.cgi?id=303517
Summary [blocks-in-inline] Fix fast/block/margin-collapse/block-inside-inline/011.htm...
alan
Reported 2025-12-03 19:49:18 PST
ssia
Attachments
Patch (18.26 KB, patch)
2025-12-03 19:51 PST, alan
no flags
Patch (21.92 KB, patch)
2025-12-04 06:05 PST, alan
no flags
Patch (21.92 KB, patch)
2025-12-04 13:08 PST, alan
no flags
[fast-cq]Patch (21.92 KB, patch)
2025-12-04 17:01 PST, alan
no flags
alan
Comment 1 2025-12-03 19:51:12 PST
alan
Comment 2 2025-12-04 06:05:01 PST
alan
Comment 3 2025-12-04 13:08:28 PST
alan
Comment 4 2025-12-04 17:01:10 PST
Created attachment 477619 [details] [fast-cq]Patch
EWS
Comment 5 2025-12-04 19:05:39 PST
Committed 303948@main (c2c6925c6d8b): <https://commits.webkit.org/303948@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477619 [details].
Radar WebKit Bug Importer
Comment 6 2025-12-04 19:06:13 PST
Note You need to log in before you can comment on or make changes to this bug.