Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp
@@ -298,13 +298,14 @@ InlineLayoutResult InlineFormattingContext::lineLayout(AbstractLineBuilder& line
     ASSERT(!needsLayoutRange.isEmpty());
     auto layoutResult = InlineLayoutResult { };
     auto& inlineLayoutState = layoutState();
+    auto& marginState = inlineLayoutState.parentBlockLayoutState().marginState();
 
     auto isPartialLayout = InlineInvalidation::mayOnlyNeedPartialLayout(lineDamage);
     ASSERT(isPartialLayout || !previousLine);
 
     if (!isPartialLayout && (createDisplayContentForLineFromCachedContent(constraints, layoutResult) || createDisplayContentForEmptyInlineContent(constraints, inlineItemList, layoutResult))) {
         layoutResult.range = InlineLayoutResult::Range::Full;
-        handleAfterSideMargin(inlineLayoutState.parentBlockLayoutState().marginState(), layoutResult.displayContent);
+        handleAfterSideMargin(marginState, layoutResult.displayContent);
         return layoutResult;
     }
 
@@ -352,10 +353,11 @@ InlineLayoutResult InlineFormattingContext::lineLayout(AbstractLineBuilder& line
         previousLine = PreviousLine { lineIndex, lineLayoutResult.contentGeometry.trailingOverflowingContentWidth, lineLayoutResult.endsWithLineBreak(), lineLayoutResult.directionality.inlineBaseDirection, WTFMove(lineLayoutResult.floatContent.suspendedFloats) };
         previousLineEnd = lineContentEnd;
         isFirstFormattedLineCandidate &= !lineLayoutResult.hasContentfulInFlowContent();
-        lineLogicalTop = formattingUtils().logicalTopForNextLine(lineLayoutResult, lineLogicalRect, floatingContext);
+        lineLogicalTop = formattingUtils().logicalTopForNextLine(lineLayoutResult, lineLogicalRect, floatingContext, marginState);
+        marginState.contentOffsetAfterSelfCollapsingBlock = { };
     }
     InlineDisplayLineBuilder::addLegacyLineClampTrailingLinkBoxIfApplicable(*this, inlineLayoutState, layoutResult.displayContent);
-    handleAfterSideMargin(inlineLayoutState.parentBlockLayoutState().marginState(), layoutResult.displayContent);
+    handleAfterSideMargin(marginState, layoutResult.displayContent);
 
     return layoutResult;
 }
@@ -398,8 +400,10 @@ void InlineFormattingContext::updateLayoutStateWithLineLayoutResult(const LineLa
         layoutState.setClearGapBeforeFirstLine(*firstLineGap);
     }
 
-    if (lineLayoutResult.isFirstLast.isLastLineWithInlineContent)
-        layoutState.setClearGapAfterLastLine(formattingUtils().logicalTopForNextLine(lineLayoutResult, lineLogicalRect, floatingContext) - lineLogicalRect.bottom());
+    if (lineLayoutResult.isFirstLast.isLastLineWithInlineContent) {
+        auto logicalTopCandidate = formattingUtils().logicalTopForNextLine(lineLayoutResult, lineLogicalRect, floatingContext, layoutState.parentBlockLayoutState().marginState());
+        layoutState.setClearGapAfterLastLine(std::max(0.f, logicalTopCandidate - lineLogicalRect.bottom()));
+    }
 
     lineLayoutResult.endsWithHyphen() ? layoutState.incrementSuccessiveHyphenatedLineCount() : layoutState.resetSuccessiveHyphenatedLineCount();
     layoutState.setFirstLineStartTrimForInitialLetter(lineLayoutResult.firstLineStartTrim);
