Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp
@@ -48,21 +48,24 @@ InlineFormattingUtils::InlineFormattingUtils(const InlineFormattingContext& inli
 {
 }
 
-InlineLayoutUnit InlineFormattingUtils::logicalTopForNextLine(const LineLayoutResult& lineLayoutResult, const InlineRect& lineLogicalRect, const FloatingContext& floatingContext) const
+InlineLayoutUnit InlineFormattingUtils::logicalTopForNextLine(const LineLayoutResult& lineLayoutResult, const InlineRect& lineLogicalRect, const FloatingContext& floatingContext, const BlockLayoutState::MarginState& marginState) const
 {
     auto didManageToPlaceInlineContentOrFloat = !lineLayoutResult.inlineItemRange.isEmpty();
     if (didManageToPlaceInlineContentOrFloat) {
-        // Normally the next line's logical top is the previous line's logical bottom, but when the line ends
-        // with the clear property set, the next line needs to clear the existing floats.
-        if (!lineLayoutResult.hasContentfulInlineContent())
-            return lineLogicalRect.bottom();
-        auto& lastRunLayoutBox = lineLayoutResult.runs.last().layoutBox();
-        if (!lastRunLayoutBox.hasFloatClear() || lastRunLayoutBox.isOutOfFlowPositioned())
-            return lineLogicalRect.bottom();
-        auto blockAxisPositionWithClearance = floatingContext.blockAxisPositionWithClearance(lastRunLayoutBox, formattingContext().geometryForBox(lastRunLayoutBox));
-        if (!blockAxisPositionWithClearance)
-            return lineLogicalRect.bottom();
-        return std::max(lineLogicalRect.bottom(), InlineLayoutUnit(blockAxisPositionWithClearance->position));
+        auto logicalTopCandidateByContent = [&] {
+            // Normally the next line's logical top is the previous line's logical bottom, but when the line ends
+            // with the clear property set, the next line needs to clear the existing floats.
+            if (!lineLayoutResult.hasContentfulInlineContent())
+                return lineLogicalRect.bottom();
+            auto& lastRunLayoutBox = lineLayoutResult.runs.last().layoutBox();
+            if (!lastRunLayoutBox.hasFloatClear() || lastRunLayoutBox.isOutOfFlowPositioned())
+                return lineLogicalRect.bottom();
+            auto blockAxisPositionWithClearance = floatingContext.blockAxisPositionWithClearance(lastRunLayoutBox, formattingContext().geometryForBox(lastRunLayoutBox));
+            if (!blockAxisPositionWithClearance)
+                return lineLogicalRect.bottom();
+            return std::max(lineLogicalRect.bottom(), InlineLayoutUnit(blockAxisPositionWithClearance->position));
+        };
+        return logicalTopCandidateByContent() + marginState.contentOffsetAfterSelfCollapsingBlock;
     }
 
     auto intrusiveFloatBottom = [&]() -> std::optional<InlineLayoutUnit> {
